@@ -2,6 +2,8 @@
 
 	* generic/tkMain.c:  Fix CYGWIN warning: "fd_set and assiciated.macros
 	have been defined in sys/types. This may cause runtime problems with W32"
+	* win/winMain.c:     Add command line processing for CYGWIN, backported
+	from trunk.
 
 2010-05-20  Donal K. Fellows  <dkf@users.sf.net>
 
